# eed_gym

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cost_wrapper.py  empathic_disobedience_env.py  eval.py  eval_logging_utils.py  eval_safe_wrap.py  mkdocs.yml  pyproject.toml  requirements.txt  simple_eval.py  train_ppo_eed.py  train_ppo_lag.py  wandb_config.yaml
artifacts/: README.md
configs/: README.md  stressors.yaml
configs/ablations/: no_affect.yaml  no_clarify_alt.yaml  no_curriculum.yaml  no_trust_penalty.yaml
configs/eval/: id.yaml  ood.yaml
configs/train/: ppo.yaml  ppo_lagrangian.yaml  ppo_lstm.yaml  ppo_masked.yaml
configs/vignette/: params_v1.yaml
docs/: api.md  index.md
docs/tutorials/: 01_install.md  02_quickstart.md  03_train_baselines.md  04_eval_id_ood.md  05_ablations.md  06_add_persona.md  07_add_scenario.md
eed_benchmark/: README.md  metrics.py
eed_benchmark/data/: vignette_params.yaml
eed_benchmark/envs/: empathic_disobedience_env.py
eed_benchmark/eval/: eval_simple.py  id_eval.py  metrics.py  st_eval.py
results/: README.md
results/stats/: params_n.json  (+2 more)
scripts/: derive_vignette_params.py  ood_eval copy.py  ood_eval.py  prep_vignette.py  quickstart.sh  run_heuristic.py  st_eval.py  vignette_effects.py
src/: empathic_disobedience_env.py  env_new.py  eval_logging_utils.py  eval_ppo.py  heuristic_run.py  metrics.py  ood_eval.py  ppo_lag.py  run_config.yaml  simple_eval.py  train_maskable.py  train_ppo_eed.py  train_ppo_lag.py  vignette_fit.py
tests/: test_smoke.py
(+27 files in other folders)
