[project]
name = "eed-gym"
version = "0.1.0"
description = "eed-gym paper benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "pandas>=2.3.2",
    "sb3-contrib>=2.7.0",
    "scipy>=1.16.0",
    "stable-baselines3>=2.6.0",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["eed_benchmark*" ]
exclude = ["tests*", "scripts*", "results*", "artifacts*", "docs*"]
